# legal-terms-app

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
